tests/NormalTests/paczka1/fuzzy1/45254310.err
Error in line 2: joo7A A228 19,0
Error in line 5: W4ZG S235 11,5
Error in line 9: 304eAV S938 30,6
